--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,51 @@
-{% extends 'base.html' %}
-
-{% block content %}
-    <h1 class="mt-3">{{ course_name }} Top Scores</h1>
-    
-    <table class="table table-striped table-bordered mt-3">
+<!DOCTYPE html>
+<html>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<head>
+    <title>Disc Golf Statistics</title>
+</head>
+<body>
+    <h1>Disc Golf Scores</h1>
+    <form method="POST">
+        <label for="player">Select a player:</label>
+        <select id="player" name="player">
+            <option value="All Players">All Players</option>
+            {% for player in player_names %}
+            <option value="{{ player }}">{{ player }}</option>
+            {% endfor %}
+        </select>
+        <br>
+        <label for="course">Select a course:</label>
+        <select id="course" name="course">
+            {% for course in course_names %}
+            <option value="{{ course }}">{{ course }}</option>
+            {% endfor %}
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
+    {% if top10_scores is not none %}
+    <h2>Top 10 scores for {{ selected_player }} on {{ selected_course }}:</h2>
+    <table>
         <thead>
             <tr>
-                {% for column in top_scores.columns %}
-                    <th>{{ column }}</th>
-                {% endfor %}
+                <th>Player Name</th>
+                <th>Date & Time</th>
+                <th>Layout</th>
+                <th>Score</th>
             </tr>
         </thead>
         <tbody>
-            {% for i in range(top_scores.shape[0]) %}
-                <tr>
-                    <td>{{ player_names[i] }}</td>
-                    <td>{{ total_scores[i] }}</td>
-                    {% for hole in range(1, max_holes+1) %}
-                        <td class="{{ 'hole-score-below-par' if top_scores.loc[i, 'Hole ' + str(hole)] < par_scores.loc['Par', 'Hole ' + str(hole)] else '' }}">{{ top_scores.loc[i, 'Hole ' + str(hole)] }}</td>
-                    {% endfor %}
-                </tr>
+            {% for index, row in top10_scores.iterrows() %}
+            <tr>
+                <td>{{ row['PlayerName'] }}</td>
+                <td>{{ row['Päivämäärä'] }}</td>
+                <td>{{ row['LayoutName'] }}</td>
+                <td>{{ row['tulos'] }}</td>
+            </tr>
             {% endfor %}
         </tbody>
     </table>
-{% endblock %}
+    {% endif %}
+</body>
+</html>
