--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,9 @@ body {
     font-family: Arial, sans-serif;
     font-size: 16px;
 }
+.negative {
+    background-color: lightgreen;
+}
 
 /* Style the navigation bar */
 .navbar {
