--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,79 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <head>
     <title>Disc Golf Statistics</title>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Disc Golf Scores</h1>
-    <form method="POST">
-        <label for="player">Select a player:</label>
-        <select id="player" name="player">
-            <option value="All Players">All Players</option>
-            {% for player in player_names %}
-            <option value="{{ player }}">{{ player }}</option>
-            {% endfor %}
-        </select>
-        <br>
-        <label for="course">Select a course:</label>
-        <select id="course" name="course">
-            {% for course in course_names %}
-            <option value="{{ course }}">{{ course }}</option>
-            {% endfor %}
-        </select>
-        <br>
-        <input type="submit" value="Submit">
+    <form action="/" method="POST">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Disc Golf Statistics</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <label for="player" class="nav-link">Select a player:</label>
+                    </li>
+                    <li class="nav-item">
+                        <select id="player" name="player" class="nav-link">
+                            <option value="All Players">All Players</option>
+                            {% for player_name in player_names %}
+                            <option value="{{ player_name }}" {% if player_name == selected_player %}selected{% endif %}>{{ player_name }}</option>
+                            {% endfor %}
+                        </select>
+                    </li>
+                    <li class="nav-item">
+                        <label for="course" class="nav-link">Select a course:</label>
+                    </li>
+                    <li class="nav-item">
+                        <select id="course" name="course" class="nav-link">
+                            {% for course_name in course_names %}
+                            <option value="{{ course_name }}" {% if course_name == selected_course %}selected{% endif %}>{{ course_name }}</option>
+                            {% endfor %}
+                        </select>
+                    </li>
+                    <li class="nav-item">
+                        <label for="layout" class="nav-link">Select a layout:</label>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <button type="submit" class="btn btn-primary nav-link">Submit</button>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </form>
-    {% if top10_scores is not none %}
-    <h2>Top 10 scores for {{ selected_player }} on {{ selected_course }}:</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Player Name</th>
-                <th>Date & Time</th>
-                <th>Layout</th>
-                <th>Score</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for index, row in top10_scores.iterrows() %}
-            <tr>
-                <td>{{ row['PlayerName'] }}</td>
-                <td>{{ row['Päivämäärä'] }}</td>
-                <td>{{ row['LayoutName'] }}</td>
-                <td>{{ row['tulos'] }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% endif %}
+    <div class="container mt-3">
+        {% if top10_scores is not none %}
+        <h2>Top 10 scores for {{ selected_player }} on {{ selected_course }}:</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Player Name</th>
+                    <th>Date & Time</th>
+                    <th>Layout</th>
+                    <th>Score</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for index, row in top10_scores.iterrows() %}
+                <tr>
+                    <td>{{ row['PlayerName'] }}</td>
+                    <td>{{ row['Päivämäärä'] }}</td>
+                    <td>{{ row['LayoutName'] }}</td>
+                    <td {% if row['tulos'] < 0 %}class="negative"{% endif %}>{{ row['tulos'] }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
