--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='Login.css') }}">
     <title>Login</title>
 </head>
+
 <body>
-    <h1>Login</h1>
-    <form method="POST" action="/">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Log In">
-    </form>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="d-flex flex-column align-items-center justify-content-center">
+                    <h1>Welcome back!</h1>
+                    <form method="POST" action="/">
+                        <div class="form-group">
+                            <label for="username">Username:</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <button type="submit" class="submit">Log In</button>
+                    </form>
+                    <p>Don't have an account? <a href="/register">Sign up</a></p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="{{ url_for('static', filename='disc-golf.jpg') }}" alt="disc-golf" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
 </body>
+
+
 </html>
