--- a/static/style.css
+++ b/static/style.css
@@ -87,9 +87,32 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
+
+
+.results-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.results-table th, .results-table td {
+    border: 1px solid #000000;
+    padding: 8px;
+}
+.results-table th {
+    background-color: #f2f2f2;
+    text-align: left;
+}
+
+table tr td:last-child {
+    width: 1%;  /* Adjust as needed */
+    white-space: nowrap;
+}
 .hole-score {
     display: inline-block;
+    text-align: center;
     margin-right: 10px;
+    width: 50px;
+    border: 1px solid #000;
+    height: 50px;
     background-color: #ddd;
     padding: 2px 5px;
     border-radius: 5px;
@@ -129,26 +152,4 @@ tr:nth-child(even) {
 .hole-score.quatro-bogey {
     background-color: black;
     color: white;
-}
-.results-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-.results-table th, .results-table td {
-    border: 1px solid #000000;
-    padding: 8px;
-}
-.results-table th {
-    background-color: #f2f2f2;
-    text-align: left;
-}
-.hole-score {
-    margin-right: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    background-color: #f2f2f2;
-}
-table tr td:last-child {
-    width: 1%;  /* Adjust as needed */
-    white-space: nowrap;
 }
