date with results

--- a/templates/register.html
+++ b/templates/register.html
@@ -35,7 +35,7 @@
                 <p>Already have an account? <a href="/">Login</a></p>
             </div>
             <div class="col-md-6">
-                <img src="{{ url_for('static', filename='disc-golf.jpg') }}" alt="Your Image" class="img-fluid">
+                <img src="{{ url_for('static', filename='disc-golf.jpg') }}" alt="Basket" class="img-fluid">
             </div>
         </div>
     </div>
