--- a/static/style.css
+++ b/static/style.css
@@ -3,11 +3,15 @@ body {
     font-family: Arial, sans-serif;
     font-size: 16px;
 }
-    
+
 .negative {
     background-color: lightgreen;
 }
 
+.birdie {
+    background-color: green;
+    color: black
+}
 
 /* Style the navigation bar */
 .navbar {
@@ -18,9 +22,11 @@ body {
 .navbar-brand {
     font-weight: bold;
 }
+
 .error {
     color: rgb(141, 69, 69);
-}   
+}
+
 .nav-link {
     font-weight: bold;
 }
@@ -48,14 +54,19 @@ table {
     margin-bottom: 20px;
 }
 
-th, td {
+th,
+td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-    max-height: 50px; /* Set the max height to 50px */
-    overflow: hidden; /* Hide any overflow */
-    text-overflow: ellipsis; /* Add an ellipsis to indicate truncated text */
-    white-space: nowrap; /* Prevent line breaks */
+    max-height: 50px;
+    /* Set the max height to 50px */
+    overflow: hidden;
+    /* Hide any overflow */
+    text-overflow: ellipsis;
+    /* Add an ellipsis to indicate truncated text */
+    white-space: nowrap;
+    /* Prevent line breaks */
 }
 
 th {
@@ -64,11 +75,14 @@ th {
 }
 
 th:first-child {
-    max-width: 40px; /* Set the max width to 50px */
+    max-width: 40px;
+    /* Set the max width to 50px */
 }
 
-td.hole-score-below-par { /* Add a CSS selector to target only the hole score cells */
-    background-color: #c8e6c9; /* Set the background color to green */
+td.hole-score-below-par {
+    /* Add a CSS selector to target only the hole score cells */
+    background-color: #c8e6c9;
+    /* Set the background color to green */
 }
 
 /* Style the table rows */
@@ -90,26 +104,24 @@ tr:nth-child(even) {
     width: 100%;
     border-collapse: collapse;
 }
-.results-table th, .results-table td {
+
+.results-table th,
+.results-table td {
     border: 1px solid #000000;
     padding: 8px;
 }
+
 .results-table th {
     background-color: #f2f2f2;
     text-align: left;
 }
 
 table tr td:last-child {
-    width: 1%;  /* Adjust as needed */
+    width: 1%;
+    /* Adjust as needed */
     white-space: nowrap;
 }
 
-/* Style the hole score cells within the .hole-scores-row */
-.results-table .hole-scores-row .hole-score {
-    background-color: red; /* Add your desired background color for .hole-scores-row */
-    color: white; /* Add your desired text color for .hole-scores-row */
-}
-/* Style the hole score cells */
 .hole-score {
     display: inline-block;
     text-align: center;
@@ -124,18 +136,6 @@ table tr td:last-child {
 
 .hole-score.hole-in-one {
     background-color: yellow;
-    color: black;
-}
-.td.hole-score.hole-in-one {
-    background-color: yellow;
-    color: black;
-}
-.td.hole-in-one {
-    background-color: yellow;
-    color: black;
-}
-.td.birdie {
-    background-color: green;
     color: black;
 }
 
@@ -175,16 +175,201 @@ table tr td:last-child {
 }
 
 .hole-score.quatro-bogey {
-    background-color: rgb(35, 1, 1);
+    background-color: black;
     color: white;
 }
 
-/* Style the hole score cells within the .hole-scores-row */
-.results-table .hole-scores-row .hole-score {
-    background-color: lightcoral; /* Add your desired background color for .hole-scores-row */
-    color: white; /* Add your desired text color for .hole-scores-row */
+
+#results {
+    margin-top: 20px;
+    padding-left: 300px;
 }
 
-.negative {
-    background-color: lightgreen;
+
+
+input[type="submit"] {
+    background-color: darkblue;
+    color: white;
+    padding-bottom: 5px;
+    padding-left: 5px;
+
+
+
+}
+
+#scorecard-form {
+
+    display: inline;
+    display: flex;
+
+
+}
+
+input[type="submit"]:hover {
+    background-color: rgb(70, 70, 166);
+}
+
+.pure-form {
+    padding-left: 260px;
+
+}
+
+
+/*.side-nav {
+    height: 100%;
+    position: fixed;
+    float: left;
+    width: 200px;
+    background-color: #f4e9e9;
+    padding-top: 60px;
+    padding-right: 50px;
+
+}
+
+
+
+.side-nav a {
+    padding: 10px 10px 4px 50px;
+    font-size: 25px;
+    color: #000000;
+    display: block;
+    align-items: center;
+}
+
+.side-nav a:hover {
+    color: #000000;
+}
+*/
+
+
+#menuToggle {
+    display: block;
+    position: relative;
+    top: 50px;
+    left: 50px;
+
+    z-index: 1;
+
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+#menuToggle a {
+    text-decoration: none;
+    color: #232323;
+
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover {
+    color: tomato;
+}
+
+
+#menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+
+    cursor: pointer;
+
+    opacity: 0;
+    /* hide this */
+    z-index: 2;
+    /* and place it over the hamburger */
+
+    -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    top: -13px;
+
+    background: #cdcdcd;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked~span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked~span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked~span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu {
+    position: absolute;
+    width: 150px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+#menu li {
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked~ul {
+    transform: none;
 }
