--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
                     <h1>Welcome back!</h1>
                     <form method="POST" action="/">
                         <div class="form-group">
-                            <label for="username">Username:</label>
+                            <label for="username">Username or Email:</label>
                             <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="form-group">
