--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h1>Sign up</h1>
-                <form method="POST" action="/registration-endpoint">
+                <form method="POST" action="{{ url_for('register') }}">
                     <div class="form-group">
                         <label for="username">Username:</label>
                         <input type="text" class="form-control" id="username" name="username" required>
