--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="favicon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="https://kit.fontawesome.com/055aa16451.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -36,7 +37,13 @@
                 <a href="#" target="_blank">
                     <li>Show me more</li>
                 </a>
+                <a class="pure-button pure-button-active" href="/">
+                    <i class="fa-solid fa-right-from-bracket" style="color: #000000;"></i>
+                </a>
+
+
             </ul>
+
         </div>
     </nav>
 
