--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+html:
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -53,7 +56,9 @@
 
 
     <form class="pure-form" action="/index" method="get" id="scorecard-form">
-        <label for="player_name">Player Name:</label><br>
+        <label for="player_name">
+            <i class="fa-sharp fa-solid fa-user fa-xl"></i>
+        </label><br>
         <select id="player_name" name="player_name" required>
             <option value="" disabled selected>Select a Player</option>
             {% for player in players %}
@@ -61,17 +66,23 @@
             {% endfor %}
         </select><br>
 
-        <label for="course_name">Course Name:</label><br>
+        <label for="course_name">
+            <i class="fa-solid fa-map fa-xl"></i>
+        </label><br>
         <select id="course_name" name="course_name" required>
             <option value="" disabled selected>Select a Course</option>
         </select><br>
 
-        <label for="layout_name">Layout Name:</label><br>
+        <label for="layout_name">
+            <i class="fa-solid fa-display fa-xl"></i>
+        </label><br>
         <select id="layout_name" name="layout_name" required>
             <option value="" disabled selected>Select a Layout</option>
         </select><br>
 
-        <label for="num-results">Number of Results:</label><br>
+        <label for="num-results">
+            <i class="fa-solid fa-list-ol fa-xl"></i>
+        </label><br>
         <select id="num-results">
             <option value="10">10</option>
             <option value="25">25</option>
@@ -79,7 +90,9 @@
         </select>
 
         <br>
-        <input type="submit" value="Submit">
+        <button type="submit">
+            <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+        </button>
         </fieldset>
     </form>
     <div id="loading-indicator" style="display: none;">Loading...</div>
