--- a/templates/index.html
+++ b/templates/index.html
@@ -25,18 +25,16 @@
 
             <ul id="menu">
 
-                <a href="/index">
+                <a href="guu">
                     <li>Home</li>
                 </a>
-                <a href="#">
-                    <li>Page</li>
+                <a href="/index">
+                    <li>Statistics</li>
                 </a>
-                <a href="#">
-                    <li>Another page</li>
+                <a href="/about">
+                    <li>About</li>
                 </a>
-                <a href="#" target="_blank">
-                    <li>Show me more</li>
-                </a>
+                
                 <a class="pure-button pure-button-active" href="/">
                     <i class="fa-solid fa-right-from-bracket" style="color: #000000;"></i>
                 </a>
