--- a/templates/index.html
+++ b/templates/index.html
@@ -29,12 +29,12 @@
                     <li>Home</li>
                 </a>
                 <a href="/index">
-                    <li>Statistics</li>
+                    <li><i class="fa-solid fa-chart-line"></i>Statistics</li>
                 </a>
                 <a href="/about">
-                    <li>About</li>
+                    <li><i class="fa-solid fa-person-circle-question"></i>About</li>
                 </a>
-                
+
                 <a class="pure-button pure-button-active" href="/">
                     <i class="fa-solid fa-right-from-bracket" style="color: #000000;"></i>
                 </a>
