--- a/static/style.css
+++ b/static/style.css
@@ -364,3 +364,25 @@ input[type="submit"]:hover {
     padding-right: 5px;
     color: darkblue;
 }
+
+h1 {
+    padding-top: 10px;
+    padding-left: 260px;
+}
+
+p {
+
+    padding-left: 260px;
+}
+
+.fa-chart-line {
+    padding-left: 5px;
+    padding-right: 5px;
+    color: darkblue;
+}
+
+.fa-person-circle-question {
+    padding-left: 5px;
+    padding-right: 5px;
+    color: darkblue;
+}
