--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                 </a>
 
                 <a class="pure-button pure-button-active" href="/">
-                    <i class="fa-solid fa-right-from-bracket" style="color: #000000;"></i>
+                    <i class="fa-solid fa-right-from-bracket"></i>
                 </a>
 
 
