--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav role="navigation">
         <div id="menuToggle">
-            <!---  <nav class="side-nav"> -->
+            
             <input type="checkbox" />
 
             <span></span>
@@ -25,8 +25,8 @@
 
             <ul id="menu">
 
-                <a href="guu">
-                    <li>Home</li>
+                <a href="/dashboard">
+                    <li>Dashboard</li>
                 </a>
                 <a href="/index">
                     <li><i class="fa-solid fa-chart-line"></i>Statistics</li>
