--- a/templates/about.html
+++ b/templates/about.html
@@ -29,7 +29,7 @@
             <ul id="menu">
 
                 <a href="/dashboard">
-                    <li>Dashboard</li>
+                    <li><i class="fa-solid fa-cubes"></i>Dashboard</li>
                 </a>
                 <a href="/index">
                     <li><i class="fa-solid fa-chart-line"></i>Statistics</li>
