--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
+
+</html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/055aa16451.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+        integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="favicon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="https://kit.fontawesome.com/055aa16451.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <h1>Welcome, {{ username }}!</h1>
 
     <nav role="navigation">
         <div id="menuToggle">
-            
+
             <input type="checkbox" />
 
             <span></span>
@@ -23,17 +31,17 @@
             <ul id="menu">
 
                 <a href="/dashboard">
-                    <li>Dashboard</li>
+                    <li><i class="fa-solid fa-cubes"></i>Dashboard</li>
                 </a>
                 <a href="/index">
-                    <li>Statistics</li>
+                    <li><i class="fa-solid fa-chart-line"></i>Statistics</li>
                 </a>
                 <a href="/about">
-                    <li>About</li>
+                    <li><i class="fa-solid fa-person-circle-question"></i>About</li>
                 </a>
-                
+
                 <a class="pure-button pure-button-active" href="/">
-                    <i class="fa-solid fa-right-from-bracket" style="color: #000000;"></i>
+                    <i class="fa-solid fa-right-from-bracket"></i>
                 </a>
 
 
@@ -42,4 +50,5 @@
         </div>
     </nav>
 </body>
+
 </html>
