--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav role="navigation">
         <div id="menuToggle">
-            
+
             <input type="checkbox" />
 
             <span></span>
@@ -26,7 +26,7 @@
             <ul id="menu">
 
                 <a href="/dashboard">
-                    <li>Dashboard</li>
+                    <li><i class="fa-solid fa-cubes"></i>Dashboard</li>
                 </a>
                 <a href="/index">
                     <li><i class="fa-solid fa-chart-line"></i>Statistics</li>
