--- a/templates/about.html
+++ b/templates/about.html
@@ -48,15 +48,16 @@
         </div>
     </nav>
 
+    <div class="pure-g">
+        <div class="pure-u-1-2">
+            <h1>Our Disc Golf Statistics App</h1>
+            <p>
+                Our Disc Golf Statistics App is a web application designed to display disc golf-related data,
+                including player scores, courses, rounds, and scorecards.
+            <div class="pure-u-1-2">
+            </div>
+            </p>
 
-    <div class="container">
-        <h1>About Our Disc Golf Statistics App</h1>
-        <p>
-            Our Disc Golf Statistics App is a web application designed to manage and display disc golf-related data,
-            including player scores, courses, rounds, and scorecards.
-
-        </p>
-    </div>
 
 
 </body>
