--- a/templates/about.html
+++ b/templates/about.html
@@ -50,13 +50,18 @@
 
     <div class="pure-g">
         <div class="pure-u-1-2">
-            <h1>Our Disc Golf Statistics App</h1>
-            <p>
+            <h1>Disc Golf Statistics App</h1>
+            <p class="about-text">
                 Our Disc Golf Statistics App is a web application designed to display disc golf-related data,
-                including player scores, courses, rounds, and scorecards.
-            <div class="pure-u-1-2">
-            </div>
+                including player scores, courses, rounds, and scorecards.<br><br>This application was made by 4 friends
+                as a school project, because we all love to play disc golf this was no brainer application to do for us
+                because now it's easier to browse our scores.
             </p>
+        </div>
+        <div class="pure-u-1-2">
+            <img src="{{ url_for('static', filename='About-us.jpg') }}" alt="About-us" class="img-fluid">
+        </div>
+    </div>
 
 
 
