--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    
     <nav role="navigation">
         <div id="menuToggle">
 
@@ -45,9 +46,13 @@
 
             </ul>
 
+            
+
         </div>
     </nav>
     <h1>Welcome, {{ username }}!</h1>
+    
+    <img src="{{ url_for('static', filename='scenery-background.jpg') }}" alt="About-us" class="background">
 
 </body>
 
