--- a/static/style.css
+++ b/static/style.css
@@ -370,6 +370,11 @@ h1 {
     padding-left: 450px;
 }
 
+.about-otsikko {
+    padding-top: 10px;
+    padding-left: 260px ;
+}
+
 p {
 
     padding-left: 260px;
