--- a/templates/about.html
+++ b/templates/about.html
@@ -50,7 +50,7 @@
 
     <div class="pure-g">
         <div class="pure-u-1-2">
-            <h1>Disc Golf Statistics App</h1>
+            <h1 class="about-otsikko">Disc Golf Statistics App</h1>
             <p class="about-text">
                 Our Disc Golf Statistics App is a web application designed to display disc golf-related data,
                 including player scores, courses, rounds, and scorecards.<br><br>This application was made by 4 friends
