--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    
+
     <nav role="navigation">
         <div id="menuToggle">
 
@@ -46,14 +46,13 @@
 
             </ul>
 
-            
+
 
         </div>
     </nav>
     <h1>Welcome, {{ username }}!</h1>
-    
+    <p class="text">To get started, check the hamburger menu</p>
     <img src="{{ url_for('static', filename='scenery-background.jpg') }}" alt="About-us" class="background">
-
 </body>
 
 </html>
