--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <li><i class="fa-solid fa-person-circle-question"></i>About</li>
                 </a>
 
-                <a class="pure-button pure-button-active" href="/">
+                <a class="pure-button pure-button-active" href="/logout">
                     <i class="fa-solid fa-right-from-bracket"></i>
                 </a>
 
