--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,19 @@
         <div class="row">
             <div class="col-md-6">
                 <h1>Sign up</h1>
+                <!-- Flash messages section -->
+                {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <ul class=flashes>
+                    {% for message in messages %}
+                      <li>{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                  {% endif %}
+                {% endwith %}
+                <!-- End of flash messages section -->
                 <form method="POST" action="{{ url_for('register') }}">
+                
                     <div class="form-group">
                         <label for="username">Username:</label>
                         <input type="text" class="form-control" id="username" name="username" required>
