--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scorecard Selection</title>
+    <title>DGS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
         integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -31,8 +31,8 @@
                 <a href="/index">
                     <li><i class="fa-solid fa-chart-line"></i>Statistics</li>
                 </a>
-                <a href="/about">
-                    <li><i class="fa-solid fa-person-circle-question"></i>About</li>
+                <a href="/teams">
+                    <li><i class="fa-solid fa-people-group"></i>Teams</li>
                 </a>
 
                 <a class="pure-button pure-button-active" href="/logout">
