--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='Login.css') }}">
-    <title>Login</title>
+    <title>DGS</title>
 </head>
 
 <body>
