--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='Register.css') }}">
-    <title>Register</title>
+    <title>DGS</title>
 </head>
 
 <body>
